# Oversvamningskollen

./: .env  .envexample  .gitignore  LICENSE  POSTGRES-SETUP.md  README-BACKEND.md  README-FLOODCAST.md  README-SV.md  README.md  TO DO  TO DO.txt  app.json  convert_sensor_to_flags.c  createDatabase.js  dump.sql  eas_commands.txt  framtida_förbättringar_chas_challenge.md  localhost endpoints.md  package-lock.json  package.json  reflektion_slutsats_chas_challenge.md  setupPostgres.js  tailwind.config.js  testConnection.js  todo.txt  vercel-backend.md
.expo/: devices.json
Backend/: .env  .envexample  .gitignore  README-BACKEND.md  app.js  db.js  importSensorData.js  logger.js  package.json  server.js  setupDatabase.js  test-neon.js  testLogin.js  updatePasswords.js  vercel.json
Frontend/: README-BACKEND.md  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
api/: index.ts
app/: +not-found.tsx  _layout.tsx  index.tsx  login.tsx  signup.tsx
components/: CustomAlert.tsx  FloodRiskModal.tsx  HapticTab.tsx
constants/: Colors.ts  FloodRiskConstants.ts  mapStyles.ts
context/: AuthContext.tsx
data/: floodRiskData.ts
documentation/: ACCESSIBILITY.md  API-DOCUMENTATION.md  ARCHITECTURE.md  BITFLAGGOR.md  CHANGELOG.md  GOOGLE_MAPS_SETUP.md  HARDWARE.md  PROJECTPLAN.md  README-EAS-PREVIEW.md  RETROSPECTIVE.md  TESTING.md  (+1 more)
layer/: .gitignore  CMakeLists.txt  README.md  active_ids.json  get_active_ids.cpp  get_active_ids.h  main.cpp  todo.md
layer/fetcher/: Fetcher.cpp  Fetcher.h
layer/output_sensors/: output_sensors.cpp  output_sensors.h
(+223 files in other folders)
